test: :bug: trying to fix the heart bug
heart in date details is cut off in moble view

--- a/src/styles/sass/partials/_modal.scss
+++ b/src/styles/sass/partials/_modal.scss
@@ -97,6 +97,9 @@
     .botSide .subTitle {
         padding: 30px 21px 15px 21px;
     }
+    * {
+        border: 2px dashed blue;
+    }
 }
 
 
