--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -806,6 +806,9 @@ input {
 .modalContainer .botSide .subTitle {
   padding: 30px 21px 15px 21px;
 }
+.modalContainer * {
+  border: 2px dashed blue;
+}
 
 .buttonContainer {
   position: absolute;
